@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Estimating tumor purity, ploidy, LOH, and SNV status using
         hybrid capture sequencing data
-Version: 1.1.20
-Date: 2016-06-11
+Version: 1.1.21
+Date: 2016-06-12
 Author: Markus Riester
 Maintainer: Markus Riester <markus.riester@novartis.com>
 Description: This package estimates tumor purity, copy number, loss of
